--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -13,7 +13,17 @@
   font-weight: bold;
   font-style: normal;
 }
-.main,
+
+.main h1 {
+  font-family: "ColfaxAI", Helvetica, sans-serif;
+  font-size: 32px;
+  line-height: 40px;
+  font-weight: bold;
+  color: #202123;
+  margin: 16px 0 40px;
+  text-align: center; 
+  width: 100%;
+}
 .main input {
   font-size: 16px;
   line-height: 24px;
@@ -68,4 +78,6 @@
   padding: 10px;
   background-color: #f0f0f0;
   border: 1px solid #ccc;
+  width: 50%;
+  height: 50%;
 }
