--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -117,7 +117,7 @@
 .main .inputForm {
   text-align: center;
   padding: 0.75em;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.75);
   border: 0;
   border-radius: 0.25em;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
@@ -166,4 +166,27 @@
   font-size: 0.8em;
   font-weight: 800;
   color: #44ce29;
+}
+
+.resultList {
+  width: 100%;
+  margin: 2em auto 0;
+  background: white;
+}
+.resultList li {
+  float: left;
+  text-align: center;
+  background-color: darkgreen;
+  width: 10%;
+  margin: 0.5%;
+}
+.resultList h4 {
+  font-size: 0.5em;
+  color: white;
+  word-break: break-all;
+  width: 100%;
+  text-align: center;
+  line-height: 1em;
+  padding: 0 0.5em;
+  height: 2em;
 }
