--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -22,60 +22,81 @@
 }
 .main {
   margin: 0;
-  h3 {
-    position: absolute;
-    top: 1em;
-    left: 1em;
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 800;
-    color: rgba(0, 0, 0, 0.75);
-    letter-spacing: 0.25em;
-    padding: 1em;
+}
+
+.footer {
+  // background: rgba(0, 0, 0, 0.05);
+  margin-top: 5vh;
+  padding: 1em;
+  color: black;
+  .copyright {
+    text-align: center;
+    font-size: 0.75em;
+  }
+
+  .icon {
+    width: 1.5em;
+  }
+  .logo {
+    display: inline-block;
+
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .logo h2 {
+    font-size: 0.85rem;
+    font-weight: 500;
+    margin: 0;
     em {
-      color: red;
+      color: #cc092f;
     }
   }
-}
-.main .icon {
-  width: 1.5em;
-  margin-top: 0.5em;
-}
-.main .logo {
-  display: inline-block;
-  padding: 0.5em;
-  text-align: center;
-  margin: 1rem auto 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-.main .logo h2 {
-  font-size: 0.85rem;
-  font-weight: 900;
-  margin: 0;
-}
-.copyright {
-  font-size: 0.75em;
-}
-.main .logo h2 em {
-  color: #cc092f;
 }
 
 .inputForm {
   text-align: center;
   border: 0;
-  width: 100%;
   background: black;
+  height: 66vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .currentResult {
+    flex: 1;
+    position: relative;
+    .promptText {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      font-size: 0.8em;
+      line-height: 1.25;
+      font-weight: 400;
+      margin: 0 0 1em;
+      padding: 1em;
+      background: rgba(255, 255, 255, 0.95);
+    }
+    .resultImage {
+      img {
+        display: block;
+        width: 100%;
+        height: 66vh;
+        object-fit: cover;
+      }
+    }
+  }
   ::placeholder {
     color: #cdcdcd;
     opacity: 0.5;
     font-size: 1rem;
   }
   form {
-    width: 66%;
+    flex: 2;
     margin: 0 auto;
+    padding: 2.5em;
   }
   input[type="text"] {
     font-size: 1.25em;
@@ -106,22 +127,7 @@
     letter-spacing: 0.25em;
   }
 }
-.resultImage {
-  img {
-    display: block;
-    width: 100%;
-    max-height: 33vh;
-    object-fit: cover;
-  }
-}
-.promptText {
-  font-size: 0.8em;
-  line-height: 1.25;
-  font-weight: 400;
-  margin: 0 0 1em;
-  padding: 1em;
-  background: rgba(255, 255, 255, 0.95);
-}
+
 .thinking {
   margin: 1em;
   font-size: 0.8em;
@@ -129,26 +135,55 @@
   color: #44ce29;
 }
 .resultList {
-  width: 66%;
-  margin: 2em auto 0;
-  background: white;
-
+  width: 90%;
+  margin: 0 auto;
   li {
     display: flex;
-    background-color: darkgreen;
+
+    overflow: hidden;
+    // border-radius: 25em;
+    margin: 1em 0;
+
+    background: white;
     width: 100%;
-    margin: 0.5%;
     align-items: center;
     justify-content: center;
-    img {
-      height: 10em;
-      object-fit: cover;
+    .resultListImage {
       flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        object-fit: cover;
+        padding: 1em;
+      }
     }
+
     h4 {
-      color: white;
-      flex: 1;
+      flex: 4;
       padding: 1em;
     }
   }
+}
+.header {
+  background: rgba(0, 0, 0, 0.125);
+  width: 100%;
+  z-index: 1;
+
+  h3 {
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 800;
+    color: rgba(0, 0, 0, 0.75);
+    letter-spacing: 0.25em;
+    padding: 1em;
+    em {
+      color: red;
+    }
+  }
+}
+
+.shadow {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
