Add `gpt-3.5-turbo` support

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -65,3 +65,9 @@
   font-weight: bold;
   margin-top: 40px;
 }
+
+.main .radios {
+  margin-bottom: 12px;
+  display: flex;
+  flex-direction: column
+}
