--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -39,6 +39,7 @@
   flex-direction: column;
   align-items: center;
     padding: 20px 20px 0;
+    background-color: #faf6ed;
 }
 
 .header {
@@ -75,9 +76,9 @@
   font-family: "Social", Helvetica, sans-serif;
   font-weight: normal;
   color: #000;
-  margin: 1em 0 1em;
+  margin: 12px 0 12px;
   margin-bottom: 12px;
-  max-width: 720px;
+  max-width: 680px;
 }
 .main h3 {
   font-size: 32px;
@@ -87,6 +88,7 @@
   color: #000;
   margin: 32px 0 40px;
   margin-bottom: 12px;
+  max-width: 680px;
 }
 .main form {
   display: flex;
@@ -137,7 +139,7 @@
   font-style: italic;
   margin-top: 20px;
   margin-bottom: 30px;
-  max-width: 720px;
+  max-width: 680px;
   font-size: 20px;
 
 }
@@ -155,7 +157,7 @@
 }
 
 .listwrapper {
-  max-width: 720px;
+  max-width: 680px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -164,7 +166,7 @@
 }
 
 .main .list {
-  max-width: 600px;
+  max-width: 500px;
 margin: 0 auto;
   padding: 0 0 0 30px; 
 
@@ -177,8 +179,8 @@ margin: 0 auto;
 
 }
 
-.question {
-  max-width: 720px;
+.regular {
+  max-width: 680px;
 }
 .main p.caption {
   margin: 4px;
@@ -187,7 +189,7 @@ margin: 0 auto;
 }
 .main p.intro {
   font-size:24px;
-  margin: 1em 0 2em;
+  margin: 24px 0 12px;
 }
 .image {
   width: 100%;
