adds fancy typewriter effect

--- a/pages/global.css
+++ b/pages/global.css
@@ -12,3 +12,16 @@ body {
 header {
   color: var(--my-accent-color);
 }
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
+
