--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -94,6 +94,7 @@
   display: flex;
   flex-direction: column;
   width: 320px;
+  margin-top: 20px;
 }
 .main input[type="text"] {
   padding: 12px 16px;
@@ -136,18 +137,31 @@
 }
 .main .result {
   font-weight: normal;
-  font-style: italic;
-  margin-top: 20px;
+  font-family: 'Courier New', Courier, monospace;  text-align: left;
+  margin-top: 18px;
+  line-height:1.25;
+  font-size: 16px;
   margin-bottom: 30px;
-  max-width: 680px;
-  font-size: 20px;
-
+  max-width: 600px;
+  width: 100%;
+  background-color: #000;
+  color: #faf6ed;
+  padding: 16px 16px 24px;
+  border-radius: 8px;
 }
+
+
 
 .labeltext {
   padding-left: 4px;
 }
-
+.main .collectionboth3 {
+  color: #fff;
+  font-family: 'Social', Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 0;
+}
 .checkmark {
 
   height: 20px;
