--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -63,8 +63,10 @@
   font-family: "Impact", Helvetica, sans-serif;
   font-weight: normal;
   color: #000;
-  margin: 30px 0 30px;
+  margin: 20px 0 20px;
+  text-align: left;
 }
+
 
 .form {
   margin-bottom:60px;
@@ -82,7 +84,7 @@
 }
 .main h3 {
   font-size: 32px;
-  line-height: 40px;
+  line-height: 1.125;
   font-family: "Impact", Helvetica, sans-serif;
   font-weight: normal;
   color: #000;
@@ -160,6 +162,7 @@
   font-family: 'Social', Helvetica, sans-serif;
   font-weight: bold;
   font-size: 20px;
+  line-height: 1.125;
   margin-top: 0;
 }
 .checkmark {
@@ -203,7 +206,7 @@ margin: 0 auto;
 }
 .main p.intro {
   font-size:24px;
-  margin: 24px 0 12px;
+  margin: 12px 0 12px;
 }
 .image {
   width: 100%;
