--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -60,7 +60,7 @@
   display: block;
   margin: 0 auto;
   width: 100%;
-  max-width:1200px;
+  max-width:240px;
 
 }
 .main h1 {
@@ -233,4 +233,50 @@ margin: 0 auto;
   text-decoration: underline;
   text-underline-offset: 0.2em;
   color: #000;
+}
+
+.card {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  margin: 20px;
+  display: inline-block;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+}
+
+.card img {
+width: 100%;
+height: 100%;
+object-fit:cover;
+object-position: center;
+position: relative;
+overflow: hidden;
+border-radius: 10px;
+
+}
+
+.titleWrapper {
+
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+ h4.cardTitle {
+  
+  font-family: "Impact", Helvetica, sans-serif;
+  text-decoration: none;
+  padding: 8px 20px;
+  font-size: 20px;
+  font-weight: normal;
+  text-align: left;
+  margin: 0;
 }
